[gd_scene load_steps=3 format=2]

[ext_resource path="res://characters/enemies/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/basic_red/enemy.tscn" type="PackedScene" id=2]

[node name="EnemySpawner" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )
enemy = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_EnemySpawner_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EnemySpawner_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
